<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>epson_robot_demo</name>
  <version>1.0.0</version>
  <description>Epson ROS 2 demo applications.</description>
  <maintainer email="noreply@noreply.com">Seiko Epson Corporation</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>epson_robot_msgs</depend>
  <depend>ament_cmake</depend>
  <depend>moveit_common</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>controller_manager_msgs</depend>
  <depend>hardware_interface</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
