<package format="2">
  <name>epson_robot_description</name>
  <version>1.0.0</version>
  <description>Epson robot configuration files.</description>
  <maintainer email="noreply@noreply.com">Seiko Epson Corporation</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
