<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>epson_robot_moveit_config</name>
  <version>1.0.0</version>
  <description>Epson robot MoveIt configuration files.</description>
  <maintainer email="noreply@noreply.com">Seiko Epson Corporation</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
