<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>epson_ros2_controller</name>
  <version>1.1.0</version>
  <description>JointTrajectoryController for EPSON robots</description>
  <maintainer email="noreply@noreply.com">Seiko Epson Corporation</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_trajectory_controller</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
